--- a/public/index.html
+++ b/public/index.html
@@ -26,15 +26,16 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script>
+      // prevents any animation triggered by the resize event from executing until the user has finished resizing the window 
+       let resizeTimer;
+        window.addEventListener('resize', () => {
+          document.body.classList.add('resize-animation-stopper');
+          clearTimeout(resizeTimer);
+          resizeTimer = setTimeout(() => {
+            document.body.classList.remove('resize-animation-stopper');
+          }, 400);
+        });
+    </script>
   </body>
 </html>
